# whetkit

./: .gitignore  CONTRIBUTING.md  MIGRATION.md  README.md  RELEASE_NOTES_0.7.0.md  RELEASING.md  SECURITY.md  VERSIONS.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  cloud-waitlist.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: curation.md  index.html  prove-your-gateway.md  task-format.md
examples/: README.md
examples/sample-server/: server.json  server.py
examples/tasks/: find-product.yaml  notify-customer.yaml  order-status.yaml  place-order.yaml  update-customer-email.yaml
src/mcp_eval/: __init__.py  cli.py
src/mcp_eval/curation/: __init__.py  optimizer.py  overlay.py  plan.py
src/mcp_eval/datasets/: __init__.py  tasks.py
src/mcp_eval/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
src/mcp_eval/mcp/: __init__.py  client.py  introspect.py
src/mcp_eval/runner/: __init__.py  agent.py
src/mcp_eval/scoring/: __init__.py  aggregate.py  deterministic.py  judge.py
src/mcp_eval/tracing/: __init__.py  records.py  store.py
src/whetkit/: __init__.py  cli.py  doctor.py  generate.py  slim.py  telemetry.py
src/whetkit/curation/: __init__.py  export.py  optimizer.py  overlay.py  plan.py
src/whetkit/datasets/: __init__.py  tasks.py
src/whetkit/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  pricing.py  registry.py
src/whetkit/mcp/: __init__.py  client.py  introspect.py  transport.py
src/whetkit/report/: __init__.py  builder.py  html.py
src/whetkit/runner/: __init__.py  agent.py
src/whetkit/scoring/: __init__.py  aggregate.py  deterministic.py  judge.py
src/whetkit/tracing/: __init__.py  records.py  store.py
tests/: conftest.py  fakes.py  test_cli.py  test_curation.py  test_datasets.py  test_doctor.py  test_export.py  test_generate.py  test_import.py  test_mcp_client.py  test_pricing.py  test_report.py  test_runner.py  test_scoring.py  test_slim.py  test_telemetry.py  test_tracing.py
tests/fixtures/: mini_server.py  mini_server_b.py
