[project]
name = "whetkit"
version = "0.6.0"
description = "Measure and improve how well LLM agents select and use the tools exposed by an MCP server"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mohammed Benlamlih" }]
requires-python = ">=3.13"
keywords = [
    "mcp",
    "model-context-protocol",
    "llm",
    "agents",
    "evals",
    "tool-use",
    "tool-selection",
    "benchmark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "mcp==1.28.1",
    "anthropic==0.116.0",
    "openai==2.44.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "typer==0.26.8",
]

[project.urls]
Homepage = "https://github.com/benlamlih/whetkit"
Repository = "https://github.com/benlamlih/whetkit"
Issues = "https://github.com/benlamlih/whetkit/issues"
Documentation = "https://github.com/benlamlih/whetkit#readme"
Changelog = "https://github.com/benlamlih/whetkit/releases"

[project.scripts]
whetkit = "whetkit.cli:app"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
    "pre-commit==4.6.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# HTML template module: markup lines stay readable at their natural length
"src/whetkit/report/html.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
